# Engage_AI_PY

./: .env.example  .gitignore  README.md  bitbucket-pipelines.yml
services/: .flake8  Dockerfile  alembic.ini  pyproject.toml
services/alembic/: env.py
services/authentication/: auth_handler.py  jwt_auth.py
services/engage_api/: main.py  schemas.py  settings.py
services/llm_connect/: llm.py
services/neondb/: get_db_schema.py  helper.py  models.py
services/resume_parse/: check.py  parse.py
services/tests/integrations/test_backend_api/: test_main.py
